[package]
name = "lsiotemplate"
version = "0.1.0"
authors = ["Chris Jones"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["handlebars", "template"]
repository = "https://github.com/lambdastackio/lsiotemplate"
homepage = "https://lambdastackio.github.io/lsiotemplate/lsiotemplate"
documentation = "https://lambdastackio.github.io/lsiotemplate/lsiotemplate"
description = """
Handlebars template CLI that allows for passing in values to replace place holders in file. It can also do more complex things
like pass in an input json file and output a file or send it to stdout.
"""
name = "lsiotemplate"
version = "0.1.0"
authors = ["Chris Jones <cj@hanscj.com>"]

[dependencies]
handlebars = "*"
clap = "2"
env_logger = "0.3"
lsio = "0.1"
rustc-serialize = "0.3"
