[package]
name = "lsiotemplate"
version = "0.1.3"
authors = ["Chris Jones"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["handlebars", "template", "json", "yaml"]
repository = "https://github.com/lambdastackio/lsiotemplate"
homepage = "https://lambdastackio.github.io/lsiotemplate/lsiotemplate"
documentation = "https://lambdastackio.github.io/lsiotemplate/lsiotemplate"
description = """
Handlebars template CLI that allows for passing in values to replace place holders in file. It can also do more complex things
like pass in an input json file and output a file or send it to stdout.
"""

[dependencies]
handlebars = "*"
yaml-rust = "*"
url = "1"
term = "0.4"
clap = "2"
env_logger = "0.3"
lsio = "0.1"
rustc-serialize = "0.3"
